# gtasa_vita

./: CMakeLists.txt  README.md
companion/: main.cpp
gamefiles/: config.txt  controls.txt
loader/: config.c  config.h  dialog.c  main.c  video_player.c
loader/shaders/: movie_f.h  movie_v.h
sce_sys/livearea/contents/: template.xml
